update chnages and fix spacing and fonts

--- a/new-design-pages/home-page/style.css
+++ b/new-design-pages/home-page/style.css
@@ -84,10 +84,10 @@ body h5 {
     font-size: 30px;
   }
   body h4 {
-    font-size: 25px;
+    font-size: 26px;
   }
   body h5 {
-    font-size: 20px;
+    font-size: 22px;
   }
 }
 
@@ -646,7 +646,7 @@ body h5 {
 }
 .reviewer-info span {
   font-size: 15px;
-  font-weight: lighter;
+  font-weight: 400;
 }
 
 .scroll-container {
@@ -787,7 +787,7 @@ body h5 {
 .stat-numbers-section p {
   margin: 0;
   color: #444;
-  font-size: clamp(14px, 2.2vw, 18px);
+  font-size: clamp(16px, 2.2vw, 18px);
 }
 .text-glow {
   text-shadow: 0 0 18px rgba(0, 153, 255, 0.35);
@@ -1039,7 +1039,7 @@ body h5 {
   margin-bottom: 18px;
   font-size: 20px;
   line-height: 1.4;
-  font-weight: lighter;
+  font-weight: 400;
 }
 
 /* Responsive */
@@ -1105,20 +1105,32 @@ body h5 {
 }
 
 .service-card p {
-  font-size: 16px;
-  line-height: 1.4;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.3;
+}
+@media (max-width: 1350px) {
+   .services-section{
+    padding: 70px 20px;
+  }
+  
 }
 @media (max-width: 1024px) {
+  
  
   .service-grid {
     grid-template-columns: repeat(1, 1fr);
     padding: 40px 20px;
+    gap: 50px;
   }
 }
 @media (max-width: 678px) {
-  .services-section{
-    padding: 70px 20px;
-  }
+ 
+  .service-card p {
+  font-size: 17px;
+  font-weight: 400;
+  line-height: 1.2;
+}
 }
 /* considrations */
 
@@ -1149,7 +1161,7 @@ body h5 {
 }
 .considration-features p {
   font-size: 18px;
-  font-weight: lighter;
+  font-weight: 400;
   max-width: 1080px;
   margin: auto;
   margin-top: 10px;
@@ -1193,10 +1205,10 @@ body h5 {
   background-color: white;
   padding: 30px 20px 45px 20px;
   border-radius: 15px;
-
   text-align: start;
   gap: 20px;
-  height: 200px;
+  height: 100%;
+  max-height: 280px;
 }
 
 .step-count-pill {
@@ -1214,19 +1226,25 @@ body h5 {
 }
 
 .step-div h5 {
-  font-size: 20px;
+  font-size: 24px;
   font-weight: 400;
-  margin-bottom: 10px;
-  letter-spacing: 0.5px;
+  margin: 10px 0px;
 }
 
 .step-div p {
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 300;
   line-height: 1.3;
 }
 
 @media (max-width: 1024px) {
+  .considration-features p {
+  font-size: 17px;
+  font-weight: 400;
+  line-height: 1.2;
+  letter-spacing: .3px;
+ 
+}
   .steps-grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -1244,6 +1262,9 @@ body h5 {
   }
 }
 @media (max-width: 675px) {
+  .building-steps-section{
+    padding: 50px 0px 80px 0px;
+  }
   .steps-grid {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
@@ -1255,6 +1276,10 @@ body h5 {
     width: 100%;
     line-height: 1.2;
   }
+  .step-div p {
+  font-size: 17px;
+  line-height: 1.2;
+}
 }
 /* <!-- FAQ section --> */
 
@@ -1338,7 +1363,7 @@ body h5 {
 .faq-content {
   margin-left: auto;
   padding-top: 0.5rem;
-  color: #555;
+font-size: 20px;
   line-height: 1.7;
 }
 @media (max-width: 1024px) {
@@ -1350,9 +1375,11 @@ body h5 {
   .faq-section {
     padding: 60px 0;
   }
-
+.faq-content{
+  font-size: 17px;
+}
   .faq-question {
-    font-size: 1rem;
+    font-size: 20px;
     font-weight: 300;
   }
 
@@ -1486,7 +1513,7 @@ body h5 {
 
 .cta-flex {
   display: flex;
-  gap: 50px;
+  gap: 60px;
   justify-content: space-between;
   align-items: center;
 }
